--- a/themes/bix/sass/style.scss
+++ b/themes/bix/sass/style.scss
@@ -62,6 +62,7 @@ Nicolas Gallagher and Jonathan Neal http://necolas.github.com/normalize.css/
 @import "widgets";
 @import "content";
 @import "media";
+@import "general";
 @import "page-templates";
 @import "front-page";
 @import "footer";
