--- a/themes/bix/sass/_navigation.scss
+++ b/themes/bix/sass/_navigation.scss
@@ -134,7 +134,6 @@
 	// }
 
 .nav-wrapper {
-	width: 100vw;
     height: 46px;
 }
 
@@ -148,6 +147,7 @@
 	border-bottom: solid 1px lighten($color__orange, 30%);
 	position: fixed;
 	width: 100vw;
+	max-width: 100%;
 	z-index: 1;
 	background: white;
 }
@@ -218,11 +218,12 @@ i.fa-chevron-up {
 		li {
 			margin: 15px 0;
 			a {
+				font-family: $font__header;
 				font-size: $font-size__main;
 				text-decoration: none;
 				color: $color__blue;
 				text-transform: uppercase;
-				font-weight: 500;
+				// font-weight: 700;
 			}
 		}
 		
@@ -242,14 +243,30 @@ ul li.current-menu-item a {
 // breakpoints
 
 @media all and (min-width: 600px) {
+	.nav-wrapper {
+		height: 0px;
+	}
+
 	.main-navigation {
-		justify-content: space-around;
+		justify-content: center;
+		padding: 0 10px;
 	}
 
 	.menu-button {
 		display: none;
 	}
+
+	.logo-link {
+		flex: 0 0 25%;
+		border-top: solid 10px $color__orange;
+		img {
+			height: 40px;
+			margin: 13px 0;
+		}
+	}
+
 	.menu-main-menu-container {
+		flex: 0 0 75%;
 		display: block;
 		position: static;
 		width: auto;
@@ -259,12 +276,25 @@ ul li.current-menu-item a {
 			width: auto;
 			display: flex;
 			border: none;
+			padding: 0;
+			position: static;
 			li:first-child {
 				display: none;
 			}
 			li{
+				flex: 0 0 33%;
+				border-top: solid 10px white;
+				text-align: center;
+				margin: 0;
+				padding: 17.5px 0;
+				&.current-menu-item {
+					border-top: solid 10px $color__orange;
+				}
+
 				a{
-					margin: 0 5vw;
+					font-size: 21px;
+					border-right: none;
+					padding: 0;
 				}
 			}
 
