--- a/themes/bix/sass/_navigation.scss
+++ b/themes/bix/sass/_navigation.scss
@@ -133,155 +133,172 @@
 	// 	}
 	// }
 
-.nav-wrapper {
+.mobile-nav-wrapper {
     height: 46px;
-}
 
-.main-navigation {
-	height: auto;
-	padding: 10px;
-	display: flex;
-	position: relative;
-	align-items: center;
-	justify-content: space-between;
-	border-bottom: solid 1px lighten($color__orange, 30%);
-	position: fixed;
-	width: 100vw;
-	max-width: 100%;
-	z-index: 1;
-	background: white;
-}
+	.main-navigation {
+		height: auto;
+		padding: 10px;
+		display: flex;
+		position: relative;
+		align-items: center;
+		justify-content: space-between;
+		border-bottom: solid 1px lighten($color__orange, 30%);
+		position: fixed;
+		width: 100vw;
+		max-width: 100%;
+		z-index: 1;
+		background: white;
+	}
 
-.logo-link {
-	height: auto;
-	display: flex;
-	align-items: center;
-	justify-content: center;
-	img {
+	.logo-link {
+		height: auto;
+		display: flex;
+		align-items: center;
+		justify-content: center;
+		img {
+			height: 25px;
+		}
+	}
+
+	.menu-button {
+		font-size: 25px;
+		line-height: 0;
+		color: $color__gray;
+		z-index: 3;
+	}
+
+	.menu-button-wrapper {
+		position: relative;
 		height: 25px;
+		width: 25px;
+
+		display: flex;
+		align-items: center;
+		justify-content: center;
+
+		i {
+			position: absolute;
+			top: 0;
+		}
 	}
-}
 
-.menu-button {
-	font-size: 25px;
-	line-height: 0;
-	color: $color__gray;
-	z-index: 3;
-}
-
-.menu-button-wrapper {
-	position: relative;
-	height: 25px;
-	width: 25px;
-
-	display: flex;
-	align-items: center;
-	justify-content: center;
-
-	i {
-		position: absolute;
-		top: 0;
+	i.fa-bars {
+		color: $color__blue;
 	}
-}
 
-i.fa-bars {
-	color: $color__blue;
-}
-
-i.fa-chevron-up {
-	color: white;
-	display: none;
-}
-
-.menu-main-menu-container {
-	z-index: 2;
-	display: none;
-	position: absolute;
-	top: 0;
-	right: 0;
-	background: rgba(0,0,0,0.7);
-	width:100vw;
-	height:  100vh;
-	overflow: hidden;
-	ul {
+	i.fa-chevron-up {
+		color: white;
 		display: none;
-		margin: 0;
-		padding: 10px 25px;
-		border-top: 46px solid $color__blue;
+	}
+
+	.menu-main-menu-container {
+		z-index: 2;
+		display: none;
 		position: absolute;
 		top: 0;
 		right: 0;
-		width: 50vw;
-		list-style: none;
-		text-align: right;
-		background: white;
-		li {
-			margin: 15px 0;
-			a {
-				font-family: $font__header;
-				font-size: $font-size__main;
-				text-decoration: none;
-				color: $color__blue;
-				text-transform: uppercase;
-				// font-weight: 700;
+		background: rgba(0,0,0,0.7);
+		width:100vw;
+		height:  100vh;
+		overflow: hidden;
+		ul {
+			display: none;
+			margin: 0;
+			padding: 10px 25px;
+			border-top: 46px solid $color__blue;
+			position: absolute;
+			top: 0;
+			right: 0;
+			width: 50vw;
+			list-style: none;
+			text-align: right;
+			background: white;
+			li {
+				margin: 15px 0;
+				a {
+					font-family: $font__header;
+					font-size: $font-size__main;
+					text-decoration: none;
+					color: $color__blue;
+					text-transform: uppercase;
+				}
 			}
+			
 		}
-		
 	}
-}
 
-.menu-item a {
-	padding-right: 8px;
-	border-right: 8px solid white;
-}
-
-ul li.current-menu-item a {
-	color: $color__orange;
-	border-color: $color__orange;
-}
-
-// breakpoints
-
-@media all and (min-width: 600px) {
-	.nav-wrapper {
-		height: 0px;
+	.menu-item a {
+		padding-right: 8px;
+		border-right: 8px solid white;
 	}
+
+	ul li.current-menu-item a {
+		color: $color__orange;
+		border-color: $color__orange;
+	}
+
+}
+
+.desktop-nav-wrapper {
+	display: none;
+	height: 0px;
 
 	.main-navigation {
 		justify-content: center;
 		padding: 0 10px;
-	}
 
-	.menu-button {
-		display: none;
+		height: auto;
+		display: flex;
+		position: relative;
+		align-items: center;
+		border-bottom: solid 1px lighten($color__orange, 30%);
+		position: fixed;
+		width: 100vw;
+		max-width: 100%;
+		z-index: 1;
+		background: white;
 	}
 
 	.logo-link {
 		flex: 0 0 25%;
-		border-top: solid 10px $color__orange;
+		border-top: solid 10px white;
+		height: auto;
+		display: flex;
+		align-items: center;
+		justify-content: center;
 		img {
 			height: 40px;
 			margin: 13px 0;
 		}
 	}
 
+	.current-page {
+		border-top: solid 10px $color__orange;
+	}
+
 	.menu-main-menu-container {
 		flex: 0 0 75%;
-		display: block;
-		position: static;
 		width: auto;
 		height: auto;
 		background: none;
+
+		z-index: 2;
+		overflow: hidden;
 		ul {
 			width: auto;
 			display: flex;
-			border: none;
 			padding: 0;
-			position: static;
+
+			margin: 0;
+			list-style: none;
+			text-align: center;
+			background: white;
 			li:first-child {
 				display: none;
 			}
-			li{
+
+			li {
 				flex: 0 0 33%;
 				border-top: solid 10px white;
 				text-align: center;
@@ -290,14 +307,36 @@ ul li.current-menu-item a {
 				&.current-menu-item {
 					border-top: solid 10px $color__orange;
 				}
-
-				a{
+				a {
 					font-size: 21px;
 					border-right: none;
 					padding: 0;
+
+					font-family: $font__header;
+					text-decoration: none;
+					color: $color__blue;
+					text-transform: uppercase;
 				}
 			}
-
+			
 		}
+	}
+
+	ul li.current-menu-item a {
+		color: $color__orange;
+		border-color: $color__orange;
+	}
+}
+
+// breakpoints
+
+@media all and (min-width: 600px) {
+
+	.mobile-nav-wrapper {
+		display: none;
+	}
+
+	.desktop-nav-wrapper {
+		display: block;
 	}
 }
